@@ -15,9 +15,6 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 
-__copyright__ = "Copyright (C) 2005 Canonical Ltd."
-__author__ = "Martin Pool <mbp@canonical.com>"
-
 # TODO: Change to a standard exception pattern: 
 #
 # - docstring of exceptions is a template for formatting the exception
@@ -30,8 +27,43 @@ __author__ = "Martin Pool <mbp@canonical.com>"
 # scott@canonical.com--2005/hct--devel--0.10 util/errors.py
 
 
-######################################################################
-# exceptions 
+"""Exceptions for bzr, and reporting of them.
+
+Exceptions are caught at a high level to report errors to the user, and
+might also be caught inside the program.  Therefore it needs to be
+possible to convert them to a meaningful string, and also for them to be
+interrogated by the program.
+
+Exceptions are defined such that the arguments given to the constructor
+are stored in the object as properties of the same name.  When the
+object is printed as a string, the doc string of the class is used as
+a format string with the property dictionary available to it.
+
+This means that exceptions can used like this:
+
+>>> import sys
+>>> try:
+...   raise NotBranchError(path='/foo/bar')
+... except:
+...   print sys.exc_type
+...   print sys.exc_value
+...   print sys.exc_value.path
+bzrlib.errors.NotBranchError
+Not a branch: /foo/bar
+/foo/bar
+
+Therefore:
+
+ * create a new exception class for any class of error that can be
+   usefully distinguished.
+
+ * the printable form of an exception is generated by the base class
+   __str__ method
+"""
+
+# based on Scott James Remnant's hct error classes
+
+
 class BzrError(StandardError):
     def __str__(self):
         # XXX: Should we show the exception class in 
@@ -49,6 +81,23 @@ class BzrError(StandardError):
                 return n + "%r" % self
         else:
             return n + `self.args`
+
+
+class BzrNewError(Exception):
+    """bzr error"""
+    # base classes should override the docstring with their human-
+    # readable explanation
+
+    def __init__(self, **kwds):
+        for key, value in kwds.items():
+            setattr(self, key, value)
+
+    def __str__(self):
+        try:
+            return self.__doc__ % self.__dict__
+        except (NameError, ValueError, KeyError), e:
+            return 'Unprintable exception %s: %s' \
+                % (self.__class__.__name__, str(e))
 
 
 class BzrCheckError(BzrError):
@@ -72,9 +121,18 @@ class BzrCommandError(BzrError):
 
 class NotBranchError(BzrError):
     """Specified path is not in a branch"""
+    def __init__(self, path):
+        BzrError.__init__(self, path)
+
     def __str__(self):
         return 'not a branch: %s' % self.args[0]
 
+## class NotBranchError(BzrNewError):
+##     """Not a branch: %(path)s"""
+##     def __init__(self, path):
+##         BzrNewError.__init__(self)
+##         self.path = path
+## 
 
 class UnsupportedFormatError(BzrError):
     """Specified path is a bzr branch that we cannot read."""
